another pass at adjustments